    "usescancodesauto" (in [sdl] section of the config
    file) to work around issues with non-US keyboard
    layouts on SDL1 builds. (Wengier)
  - Added code pages 808, 850, 852, 853, 855, 857,
    858, 869, 872 for host to guest codepage mapping
    on mounted local or overlay drives. (Wengier)
  - The mapper options "Increase recording volume" and
    "Decrease recording volume" now show as menu items
    (under "Sound") too. (Wengier)
  - Fixed inputting of ASCII character 224 and 240
    in Windows SDL2 or MinGW builds. (Wengier)
  - Fixed possible DPMI error when running Windows
    98 installation from the DOSBox-X shell without
    using a batch file. (Wengier)
  - Fixed a bug in the FAT driver that can cause
    a byte to get lost if writing up to the end of
    a cluster, which seems to be behind the
    corruption with program group files when running
    Windows for Workgroups 3.11 from DOSBox-X shell.
    [https://github.com/joncampbell123/dosbox-x/issues/1758#issuecomment-665193066]
  - Unknown INT 2Fh calls are now debug output, not
    an error.
  - Added VESA BIOS mode 68h alias as indicated on
    the Vogons forum.
  - Fixed handling of config commands with spaces
    when the "shell configuration as commands"
    setting is enabled (quotes are needed in such
    cases). Also added "Config options as commands"
    toggle menu (under "DOS") to enable/disable the
    feature from menu. It is disabled by default to
    avoid name clash with other programs. (Wengier)
  - Added "Enable quick reboot" toggle menu (under
    "DOS") so that when enabled, DOS restart calls
    will reboot the emulated DOS (integrated or
    guest DOS) instead of the virtual machine in
    DOSBox-X. Also, you could change the default
    setting for this by setting the new "quick
    reboot" config option in "dos" section (Wengier)
  - Added new "Reboot guest system" menu item (under
    "Main") to reboot the kernel of the integrated